--- a/index.html
+++ b/index.html
@@ -80,15 +80,9 @@
                                     <div class="col l-8 m-12 c-12">
                                         <div class="box-item-intro">
                                             <h2>GIỚI THIỆU</h2>
-                                            <p>Xin chào, Mình tên là Sakura.
-                                                 Mình đến từ Nhật Bản, năm nay mình 20 tuổi.
-                                                  Mình tham gia lớp học này vì lịch sử hào hùng 
-                                                  của Việt Nam khiến tôi bị cuốn hút,
-                                                   kể từ khi tôi bắt đầu đi đến các 
-                                                   phòng trưng bày nghệ thuật khi còn là 
-                                                   một cô bé, và về cơ bản tôi chỉ hào hứng 
-                                                   muốn tìm hiểu thêm một chút. Rất mong
-                                                    được sự giúp đỡ của các bạn
+                                            <p>Xin chào, Tôi là Tuân, tôi đã tốt nghiệp chuyên ngành Công Nghệ Thông Tin trường Đại Học Cần Thơ. tôi yêu thích thiết kế,
+                                                âm nhạc và điện ảnh. với kiến thức tôi học được cộng thêm tinh thần trách nhiệm sáng tạo của bản thân cũng như gu thẳm mĩ tốt, 
+                                                tôi hy vọng có thể đống gốp vào sự phát triển của công ty.
                                              </p>
                                         </div>
                                         <div class="box-item-contact">
