sua loi chinh ta

--- a/index.html
+++ b/index.html
@@ -81,8 +81,9 @@
                                         <div class="box-item-intro">
                                             <h2>GIỚI THIỆU</h2>
                                             <p>Xin chào, Tôi là Tuân, tôi đã tốt nghiệp chuyên ngành Công Nghệ Thông Tin trường Đại Học Cần Thơ. tôi yêu thích thiết kế,
-                                                âm nhạc và điện ảnh. với kiến thức tôi học được cộng thêm tinh thần trách nhiệm sáng tạo của bản thân cũng như gu thẳm mĩ tốt, 
-                                                tôi hy vọng có thể đống gốp vào sự phát triển của công ty.
+                                                âm nhạc và điện ảnh. với kiến thức tôi học được cộng thêm tinh thần trách nhiệm sáng tạo của bản thân cũng như gu thẩm mỹ tốt,
+                                                tôi hy vọng có thể đóng góp vào sự phát triển của công ty.
+
                                              </p>
                                         </div>
                                         <div class="box-item-contact">
