update cv de phong van trai nganh

--- a/index.html
+++ b/index.html
@@ -159,14 +159,9 @@
                                                 <div class="level level-js"></div>
                                             </div>
                                         </div>
+                                        
                                         <div class="name-skill">
-                                            <p>React</p>
-                                            <div class="level-bar">
-                                                <div class="level level-react"></div>
-                                            </div>
-                                        </div>
-                                        <div class="name-skill">
-                                            <p>NodeJS</p>
+                                            <p>Bootstrap</p>
                                             <div class="level-bar">
                                                 <div class="level level-nodejs"></div>
                                             </div>
@@ -186,8 +181,7 @@
                                         <div class="info-content">
                                             <ul>
                                                 <li>Nhận dạng và trích xuất thông tin trên ảnh thẻ sinh viên (Computer Vision with Python).</li>
-                                                <li>Thiết kế và xây dựng hệ thống quản lý nhà hàng (Windows Forms, C#, SQL sever).</li>
-                                                <li>Thiết kế và xây dựng trang web bán hàng online (PHP, JavaScript, CSS).</li>
+                                                <li>Thiết kế và xây dựng hệ thống quản lý nhà hàng (Windows Forms, C#, SQL sever).</li>                                 
                                                 <li>Xây dựng hệ thống nhận diện khuôn mặt (python, OpenCV)</li>
                                             </ul>
                                         </div>
@@ -197,7 +191,8 @@
                                         <div class="info-year"><p>2020 - </p></div>
                                         <div class="info-content">
                                             <ul>
-                                                <li>Trang web CV giới thiệu bản thân (JavaScript, SCSS, Reactjs, Nodejs, Reponsive) </li>
+                                                <li>Trang web CV (HTML, CSS, JavaScript, Reponsive) </li>
+                                                <li>Trang web thư viện ảnh gọi API từ Pexels (HTML, CSS, JavaScript, Bootstrap, Reponsive)</li>
                                             </ul>
                                         </div>
                                         
