--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                                             <p>Chuyên ngành: Công Nghệ Thông Tin</p>
                                         </div>
                                     </div>
-                                    <div class="col l-8 m-12 c-12">
+                                    <div class="col l-8 m-12 c-12 box-item-map">
                                         <div class="box-item-intro">
                                             <h2>GIỚI THIỆU</h2>
                                             <p>Xin chào, Tôi là Tuân, tôi đã tốt nghiệp chuyên ngành Công Nghệ Thông Tin trường Đại Học Cần Thơ. tôi yêu thích thiết kế,
